error.txt
haris@haris-desktop:~/celestial-nav/build$ cmake --build .
[ 12%] Building CXX object CMakeFiles/celestial_nav.dir/src/main.cpp.o
[ 25%] Building CXX object CMakeFiles/celestial_nav.dir/src/image_acquisition.cpp.o
[ 37%] Building CXX object CMakeFiles/celestial_nav.dir/src/preprocessing.cpp.o
[ 50%] Building CXX object CMakeFiles/celestial_nav.dir/src/star_detection.cpp.o
[ 62%] Building CXX object CMakeFiles/celestial_nav.dir/src/star_matching.cpp.o
[ 75%] Building CXX object CMakeFiles/celestial_nav.dir/src/location_determination.cpp.o
/home/haris/celestial-nav/src/location_determination.cpp: In static member function ‘static double LocationDetermination::calculateGuessScore(const Eigen::Vector2d&, const std::vector<std::pair<Star, ReferenceStarData> >&, int)’:
/home/haris/celestial-nav/src/location_determination.cpp:278:79: error: expression cannot be used as a function
  278 |         double measuredAltitude = std::asin(std::sin(stars[i].first.position.y()) * std::sin(guess.x()) +
      |                                                      ~~~~~~~~~~~~~~~~~~~~~~~~~^~
/home/haris/celestial-nav/src/location_determination.cpp:279:79: error: expression cannot be used as a function
  279 |                                             std::cos(stars[i].first.position.y()) * std::cos(guess.x()) *
      |                                                      ~~~~~~~~~~~~~~~~~~~~~~~~~^~
/home/haris/celestial-nav/src/location_determination.cpp:280:79: error: expression cannot be used as a function
  280 |                                             std::cos(stars[i].first.position.x() - guess.y()));
      |                                                      ~~~~~~~~~~~~~~~~~~~~~~~~~^~
gmake[2]: *** [CMakeFiles/celestial_nav.dir/build.make:146: CMakeFiles/celestial_nav.dir/src/location_determination.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:83: CMakeFiles/celestial_nav.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
haris@haris-desktop:~/celestial-nav/build$ 